# abflow

./: .gitattributes  .gitignore  README.md  abfe_environment.yml  pyproject.toml
abfe/: analyse_abfe.py  setup_abfe_simulations.py  setup_vanilla_simulations.py
abfe/tests/: datafiles.py  test_01_scaffold.py  test_02_membrane_extract.py  test_03_plumbing_until_solvate.py  test_04_counts_ions_index.py  test_analysis_abfe.py  test_setup_abfe.py  test_setup_vanilla.py
abfe/tests/test_data/vanilla_input/system_setup/charmm/: align_lig2charmm_template.pml  align_ligs2charmm.py  align_protein2charmm.pml  tailored_script.pml
abfe/tests/test_data/vanilla_input/system_setup/ligands_aligned2charmm/: 4h.sdf  4i.sdf  4j.sdf  4k.sdf  4l.sdf  4m.sdf  4n.sdf  4q.sdf  (+1 more)
abfe/utils/: abfe_helpers_hrex.py  abfe_helpers_hrex_refactored.py  add_alchemical_ion_v3_pertuball.py  bespokefit_param_func.py  extract_membrane.py  gromacs_helpers_single_chain.py  ligand_only_setup.py  smirnoff_param_func.py  utils.py
abfe/utils/MDresgen/: setup.py
abfe/utils/MDresgen/MDRestraintsGenerator.egg-info/: PKG-INFO  SOURCES.txt
abfe/utils/cluster/job_script_template/abfe/: job_complex_archer_hrex_cont_template.sh  job_complex_archer_hrex_template.sh
abfe/utils/cluster/job_script_template/abfe_ligonly/: job_abfe_lig_archer.sh
abfe/utils/cluster/job_script_template/equilibration/: job_vanilla_archer.sh  job_vanilla_ranvier.sh  job_vanilla_soma.sh  job_vanilla_vertex.sh
abfe/utils/data/forcefield_dir/: POPC.itp
abfe/utils/data/ligand_only/: lig_simulations_list.txt  lig_submit.sh  lig_topol_ref.top  ligand_em.mdp
abfe/utils/data/ligand_only/lig_super_mdp_files_pertuball/: coul.enmin.super.mdp  coul.npt_b.super.mdp  coul.npt_pr.super.mdp  coul.nvt.super.mdp  coul.prod.super.mdp  vdw.npt_b.super.mdp  vdw.npt_pr.super.mdp  vdw.nvt.super.mdp  vdw.prod.super.mdp
abfe/utils/data/mdps/mdps_vanilla_memprot/: nvt.mdp
abfe/utils/data/mdps/super_mdp_files_pertuball/: coul.enmin.super.mdp  coul.npt_b.super.mdp  coul.npt_pr.super.mdp  coul.nvt.super.mdp  coul.prod.super.mdp  rest.nvt.super.mdp  vdw.npt_b.super.mdp  vdw.npt_pr.super.mdp  vdw.prod.super.mdp
abfe/utils/data/mdps/super_mdp_files_pertuball_smaller_dumps/: coul.npt_b.super.mdp  coul.npt_pr.super.mdp  coul.nvt.super.mdp  coul.prod.super.mdp  rest.prod.super.mdp  vdw.enmin.super.mdp  vdw.npt_b.super.mdp  vdw.npt_pr.super.mdp  vdw.nvt.super.mdp
abfe/utils/data/mdps/super_mdp_files_soluble/: coul.enmin.super.mdp  coul.npt_b.super.mdp  coul.npt_pr.super.mdp  coul.nvt.super.mdp  coul.prod.super.mdp  coul.prod2.super.mdp  rest.enmin.super.mdp  rest.npt_b.super.mdp  rest.npt_pr.super.mdp  rest.nvt.super.mdp  rest.prod.super.mdp  rest.prod2.super.mdp  vdw.enmin.super.mdp  vdw.npt_b.super.mdp  vdw.npt_pr.super.mdp  vdw.nvt.super.mdp  vdw.prod.super.mdp  vdw.prod2.super.mdp
abflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+317 files in other folders)
