[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abflow"
version = "0.1.0"
description = "Automated free energy simulation workflows for ligand binding"
authors = [
    { name = "Antonia Florina Panescu", email = "antonia.panescu@somewhere.ox.ac.uk" }
]
dependencies = [
    "MDAnalysis",
    "openff-toolkit",
    "numpy",
    "scipy"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["abfe*"]

[tool.setuptools.package-data]
"abfe.utils.cluster.job_script_template.equilibration" = ["*.sh"]
"abfe.utils.cluster.job_script_template.abfe" = ["*.sh"]
"abfe.utils.data.mdps.mdps_vanilla_memprot" = ["*.mdp"]
